@@ -21,6 +21,8 @@ namespace gameswf
 	struct as_color : public as_object
 	{
 		as_color();
+		virtual as_color* cast_to_as_color() { return this; }
+
 		smart_ptr<character> m_target;
 	};
 
