@@ -22,10 +22,14 @@ namespace gameswf
 
 	void	sprite_hit_test(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -48,32 +52,46 @@ namespace gameswf
 
 	void	sprite_play(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
+
 		sprite->set_play_state(movie_interface::PLAY);
 	}
 
 	void	sprite_stop(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
+
 		sprite->set_play_state(movie_interface::STOP);
 	}
 
 	void	sprite_goto_and_play(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -91,10 +109,14 @@ namespace gameswf
 
 	void	sprite_goto_and_stop(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -112,10 +134,14 @@ namespace gameswf
 
 	void	sprite_next_frame(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -130,10 +156,14 @@ namespace gameswf
 
 	void	sprite_prev_frame(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -147,10 +177,14 @@ namespace gameswf
 
 	void	sprite_get_bytes_loaded(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -159,10 +193,14 @@ namespace gameswf
 
 	void	sprite_get_bytes_total(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -172,10 +210,14 @@ namespace gameswf
 	//swapDepths(target:Object) : Void
 	void sprite_swap_depths(const fn_call& fn) 
 	{ 
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -185,17 +227,26 @@ namespace gameswf
 			return; 
 		} 
 
-		sprite_instance* target; 
+		sprite_instance* target = NULL; 
 		if (fn.arg(0).get_type() == as_value::OBJECT) 
 		{ 
-			target = (sprite_instance*) fn.arg(0).to_object(); 
+			target = fn.arg(0).to_object()->cast_to_sprite(); 
 		} 
 		else 
 			if (fn.arg(0).get_type() == as_value::NUMBER) 
 			{ 
 				int target_depth = int(fn.arg(0).to_number()); 
-				sprite_instance* parent = (sprite_instance*) sprite->get_parent(); 
-				target = (sprite_instance*) parent->m_display_list.get_character_at_depth(target_depth); 
+				sprite_instance* parent = sprite->get_parent()->cast_to_sprite(); 
+				
+				character* ch = parent->m_display_list.get_character_at_depth(target_depth);
+				if (ch)
+				{
+					target = parent->m_display_list.get_character_at_depth(target_depth)->cast_to_sprite();
+				}
+				else
+				{
+					log_error("swapDepths: no character in depth #%d\n", target_depth); 
+				}
 			} 
 			else 
 			{ 
@@ -215,7 +266,7 @@ namespace gameswf
 				target->set_depth(sprite->get_depth()); 
 				sprite->set_depth(target_depth); 
 
-				sprite_instance* parent = (sprite_instance*) sprite->get_parent(); 
+				sprite_instance* parent = sprite->get_parent()->cast_to_sprite(); 
 				parent->m_display_list.swap_characters(sprite, target); 
 			} 
 			else 
@@ -227,10 +278,14 @@ namespace gameswf
 	//duplicateMovieClip(name:String, depth:Number, [initObject:Object]) : MovieClip 
 	void sprite_duplicate_movieclip(const fn_call& fn) 
 	{ 
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -243,7 +298,7 @@ namespace gameswf
 		as_object* init_object = NULL;
 		if (fn.nargs == 3) 
 		{ 
-			init_object = (as_object*) fn.arg(2).to_object(); 
+			init_object = fn.arg(2).to_object()->cast_to_as_object(); 
 		} 
 
 		character* ch = sprite->clone_display_object(
@@ -256,10 +311,14 @@ namespace gameswf
 
 	void sprite_get_depth(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -269,10 +328,14 @@ namespace gameswf
 	//createEmptyMovieClip(name:String, depth:Number) : MovieClip
 	void sprite_create_empty_movieclip(const fn_call& fn)
 	{
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
@@ -289,14 +352,18 @@ namespace gameswf
 	// removeMovieClip() : Void 
 	void sprite_remove_movieclip(const fn_call& fn) 
 	{ 
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
 
-		sprite_instance* parent = (sprite_instance*) sprite->get_parent(); 
+		sprite_instance* parent = sprite->get_parent()->cast_to_sprite(); 
 		if (parent) 
 		{ 
 			parent->remove_display_object(sprite->get_depth(), -1); 
@@ -317,12 +384,17 @@ namespace gameswf
 	// public unloadMovie() : Void
 	void sprite_unloadmovie(const fn_call& fn) 
 	{ 
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
+
 		fn.env->load_file("", as_value(fn.this_ptr));
 	} 
 
@@ -331,12 +403,17 @@ namespace gameswf
 	// The value returned is 0 or larger (that is, negative numbers are not returned). 
 	void sprite_getnexthighestdepth(const fn_call& fn) 
 	{ 
-		sprite_instance* sprite = (sprite_instance*) fn.this_ptr;
+		sprite_instance* sprite = NULL;
+		if (fn.this_ptr)
+		{
+			sprite = fn.this_ptr->cast_to_sprite();
+		}
 		if (sprite == NULL)
 		{
-			sprite = (sprite_instance*) fn.env->get_target();
+			sprite = fn.env->get_target()->cast_to_sprite();
 		}
 		assert(sprite);
+
 		fn.result->set_int(sprite->get_highest_depth());
 	} 
 
